Feat: update dockerfile and docker-compose and add eslint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,5 +3,13 @@
   "rules": {
     "no-useless-constructor": "off",
     "no-new": "off"
-  }
+  },
+  "overrides": [
+    {
+      "files": ["src/**/*.spec.ts", "src/**/tests/**/*.ts"],
+      "rules": {
+        "@typescript-eslint/no-explicit-any": "off"
+      }
+    }
+  ]
 }
